--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
     <div id="app-container" class="hidden">
         <nav class="sidebar">
             <div class="sidebar-header">
-                <h2>Piblo</h2>
-            </div>
+				<img src="logo.png" alt="Piblo" class="sidebar-logo">
+				<h2>Piblo</h2>
+			</div>
             <ul>
                 <li><a href="#" class="nav-link" data-page="new-entry">New Entry</a></li>
                 <li class="has-submenu">
@@ -56,7 +57,6 @@
             <div class="content-area">
                 <!-- New Entry Page -->
                 <div id="new-entry" class="page-content">
-					<h2>New Service Entry</h2>
 					<form id="service-entry-form" class="piblo-form">
 						
 						<div class="form-grid-compact">
@@ -132,6 +132,7 @@
 										<th>Date</th>
 										<th>Odometer</th>
 										<th>Task / Title</th>
+										<th>Description</th>
 										<th>Oil</th>
 										<th></th>
 										<th></th>
