--- a/index.html
+++ b/index.html
@@ -209,8 +209,15 @@
 									<input type="text" id="car-license" placeholder="e.g., AB12345, CD67890">
 								</div>
 								<div class="input-group">
+									<label for="car-distance-unit">Distance Unit</label>
+									<select id="car-distance-unit" required>
+										<option value="km">Kilometers (km)</option>
+										<option value="miles">Miles (mi)</option>
+									</select>
+								</div>
+								<div class="input-group">
 									<label for="car-color">Assigned Color</label>
-									<input type="color" id="car-color" value="#3498db">
+									<input type="color" id="car-color" value="#2563eb">
 								</div>
 								<div class="input-group">
 									<label for="car-photo">Car Photo</label>
