--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
 							<button type="button" id="add-part-btn" class="btn-secondary-small">+ Add Another Part</button>
 						</div>
 						
+						<!-- NEW: Container for existing photos when editing -->
+						<div id="existing-photos-container" style="margin-bottom: 20px; padding: 20px; background: var(--bg-secondary); border-radius: var(--radius-lg); border: 1px solid var(--border-color); display: none;">
+						</div>
+						
 						<div class="input-group">
 							<label for="entry-photos">Add Photo(s)</label>
 							<input type="file" id="entry-photos" accept="image/*" multiple>
